# bot_ow.py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/bot_ow/: bot.py  main.py
